# SymplEvents

./: .gitignore  CMakeLists.txt  README.md
src/: delegate.h  event_manager.h
tests/: example.cc  test_delegate.cc  test_events.cc
